Reduced top nav margin spacing to correct the word wrap effect of default font.

--- a/_formals_css.css
+++ b/_formals_css.css
@@ -340,7 +340,7 @@ progress::-moz-progress-bar { background: #E61652; }
 	cursor: pointer;
     float: left;
     text-align: center;
-	margin-left: 34px;
+	margin-left: 30px;
 }
 .dropdownLinkContainer div a{
 	color: #909090;
